package com.example.utrack.model

class Session {
}