package com.example.utrack.model

class User {
}